--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 android {
     namespace 'com.example.noteappcleanarchitecture'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.noteappcleanarchitecture"
@@ -33,8 +33,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.11'
+    }
+
     buildFeatures {
         viewBinding true
+        compose true
     }
 }
 
@@ -48,10 +54,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // Jetpack Compose (BOM)
+    implementation platform("androidx.compose:compose-bom:2024.05.00")
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.material3:material3"
+
+    // Activity برای Compose
+    implementation "androidx.activity:activity-compose:1.9.0"
+
+    // ViewModel + lifecycle برای Compose
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.8.1"
+
+    // Debug
+    debugImplementation "androidx.compose.ui:ui-tooling"
+
     // room database
-    var room_version = "2.5.0"
+    var room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
@@ -72,8 +92,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     //dagger hilt
-    implementation("com.google.dagger:hilt-android:2.44")
-    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("com.google.dagger:hilt-android:2.51.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.51.1")
 
 
 }
