--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ plugins {
 
 android {
     namespace 'com.example.noteappcleanarchitecture'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.noteappcleanarchitecture"
-        minSdk 21
+        minSdk 23
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -94,6 +94,7 @@ dependencies {
 
     //dagger hilt
     implementation("com.google.dagger:hilt-android:2.51.1")
+    implementation ("androidx.hilt:hilt-navigation-compose:1.3.0")
     kapt("com.google.dagger:hilt-android-compiler:2.51.1")
 
 
